# voice-rag-agent

./: .gitignore  Readme.md  docker-compose.yml
agent/: .gitignore  pyproject.toml
agent/my_local_vectordb/: chroma.sqlite3
agent/src/agent/: main.py  rag.py
agent/src/api/: server.py
frontend/: components.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: VoiceAgent.tsx
frontend/src/types/: voice.ts
