[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayush Kumar", email = "fanduayush2000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "google-genai>=2.10.0",
    "livekit-agents>=1.6.4",
    "livekit-api>=1.1.1",
    "livekit-plugins-google>=1.6.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
